hphp/test/zend/good/tests/classes/abstract_by_interface_002.php.expectf
object(Leaf) (0) {
}

Fatal error: Class Fails contains abstract method (MyInterfaceFunc) and must therefore be declared abstract or implement the remaining methods in %s/abstract_by_interface_002.php on line 21
